--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,6 +14,7 @@ sonar.dynamicAnalysis=reuseReports
 
 ## sonar coverage settings
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.sources=src
 sonar.python.coverage.reportPaths=coverage*.xml
 sonar.python.xunit.reportPath=xunit-result*.xml
 
